<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="about_long_msg">About</string>
    <string name="app_name">Musicorum</string>
    <string name="app_name_pro">Musicorum Pro</string>
    <string name="app_package">com.RunTimeTerror.Musicorum</string>
    <string name="bon_tabac">J\'ai du bon tabac</string>
    <string name="cancel">Cancel</string>
    <string name="choose_filename">Choose file name :</string>
    <string name="clair_lune">Au Clair de La Lune</string>
    <string name="claire_fontaine">A la Claire Fontaine</string>
    <string name="deleted">#name# deleted</string>
    <string name="directory">Directory</string>
    <string name="enter_filename">You must enter a filename</string>
    <string name="error_deleting">Error during deleting #name#</string>
    <string name="fais_dodo">Fais Dodo Colas</string>
    <string name="frere_jacques">Frère Jacques</string>
    <string name="grant_permissions">You need to grant all asked permissions.</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="hymne_joie">Hymne à la joie</string>
    <string name="jingle_bells">Jingle Bells</string>
    <string name="la_marseillaise">La Marseillaise</string>
    <string name="list">List</string>
    <string name="list_long_msg">List recorded files</string>
    <string name="love_tender">Love me Tender</string>
    <string name="merry_christmas">Merry Christmas</string>
    <string name="meunier_dors">Meunier Tu Dors</string>
    <string name="more_long_msg">Open Tools Bar</string>
    <string name="note_do">Do</string>
    <string name="note_fa">Fa</string>
    <string name="note_la">La</string>
    <string name="note_mi">Mi</string>
    <string name="note_re">Re</string>
    <string name="note_si">Si</string>
    <string name="note_sol">Sol</string>
    <string name="ok">Ok</string>
    <string name="overflow">More</string>
    <string name="papa_noel">Papa Noel</string>
    <string name="permissions_mandatory">The permissions are mandatory. You need to allow them.</string>
    <string name="play">Play</string>
    <string name="raz">RAZ</string>
    <string name="raz_long_msg">remove current record</string>
    <string name="record">Record</string>
    <string name="record_long_msg">Record what you play</string>
    <string name="recording">Recording …</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_error">Error during sharing</string>
    <string name="share_title">[Musicorum] Sharing sound #name#</string>
    <string name="share_title_text">[Musicorum] Sharing text #name#</string>
    <string name="shared_from">Shared from RunTimeTerror\'s Musicorum</string>
    <string name="stop">Stop</string>
    <string name="toolsbar">Tools bar</string>
    <string name="track_title">Musics</string>
    <string name="tracks_long_msg">Choose a record to play</string>
    <string name="volume">Volume</string>
    <string name="volume_down">Volume Down</string>
    <string name="volume_down_long_msg">Volume Down</string>
    <string name="volume_title">Volume : #volume# %</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_up_long_msg">Volume Up</string>
    <string name="when_saints">When the Saints</string>
    <string name="AudioRecorderErrorMsg">First turn off key Recording </string>
    <string name="AudioRecorderError">Can\'t Start Animation</string>
    <string name="ButtonRecorderError">Can\'t Start Animation</string>
    <string name="ButtonRecorderErrorMsg">First Turn off the Audio Recording</string>
    <string name="SaveAudioRecordError">Start Audio Recording first</string>
    <string name="recordingError">Recording Failed</string>
    <string name="notSupported">not supported</string>
    <string name="operationFailed">operation failed</string>
    <string name="AudioRecord">Audio Record</string>
    <string name="stopAudioRecording">stop audio recording</string>
    <string name="discard">discard</string>
    <string name="convert">Notes Extractor</string>
    <string name="enter_filename2">Enter the filename (*.wav)</string>
    <string name="EnterTheRecordName">Enter name for record</string>
    <string name="enter">enter</string>
    <string name="trackNameCollison">Track name already Present</string>
    <string name="title_choose_file">Choose file</string>
    <string name="remove_title">Remove title</string>
    <string name="are_you_sure_remove">Are you sure to remove #name# ?</string>
    <string name="tum_hi_ho">Tum hi ho</string>
    <string name="thank_you_tune">Thank You Tune</string>
    <string name="title_save">Do you wan to save record as a file in external storage?</string>
    <string name="content_save">This will allow you to share your record with others also you can import it back through import button in tools bar</string>
    <string name="import_record">Import Record</string>
    <string name="trackExist">Track with same name already exist</string>
    <string name="animate">Animate the Record</string>
    <string name="AnimationFinished">Animation Finished</string>
    <string name="import_record_low_size_error">Probably your record does not have any notes</string>
    <string name="this_track_has_no_key">Can\'t add this track.. It doesn\'t have any key</string>
    <string name="yes">Yes</string>
    <string name="deleteConfirmation">Confirmation</string>
</resources>
